apps/base/forge/gitea_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: forge
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - gitea.superkooka.com
    secretName: gitea-tls
  rules:
  - host: gitea.superkooka.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitea-helm-release
            port:
              number: 80
